--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
         liff.sendMessages([{
             type: 'text',
-            text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates.join('\n ')}\nその他メッセージ：${formData.message}`
+            text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates.join('\n ')}\nメッセージ：${formData.message}`
         }]).then(() => {
             alert('予約が送信されました');
             liff.closeWindow();
