--- a/index.html
+++ b/index.html
@@ -116,24 +116,20 @@
             background-color: #444;
             color: #fff;
         }
+        .week-button-container {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            margin-bottom: 10px;
+        }
         .week-button {
-            margin: 10px;
+            margin: 0 10px;
             padding: 10px 20px;
             background-color: #444;
             color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-        }
-        .week-button-prev {
-            position: absolute;
-            top: -10px;
-            left: -10px;
-        }
-        .week-button-next {
-            position: absolute;
-            top: -10px;
-            right: -10px;
         }
     </style>
 </head>
@@ -161,6 +157,10 @@
 
         <label for="date1">第1希望日※必須<br>希望時間は00分or30分でお願いします</label>
         <div class="calendar-container">
+            <div class="week-button-container">
+                <button class="week-button" onclick="previousWeek()">前の週</button>
+                <button class="week-button" onclick="nextWeek()">翌週</button>
+            </div>
             <div id="calendar1" class="calendar">
                 <table>
                     <thead>
@@ -179,8 +179,6 @@
                         <!-- カレンダーの内容がここに追加される -->
                     </tbody>
                 </table>
-                <button class="week-button week-button-prev" onclick="previousWeek()">前の週</button>
-                <button class="week-button week-button-next" onclick="nextWeek()">翌週</button>
             </div>
         </div>
 
