--- a/index.html
+++ b/index.html
@@ -94,17 +94,19 @@
             border-radius: 4px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             overflow: auto;
-            position: relative;
+            width: 100%; /* Full width of the container */
         }
         .calendar table {
-            width: 100%;
+            width: 100%; /* Full width of the container */
             border-collapse: collapse;
         }
         .calendar th, .calendar td {
             text-align: center;
-            padding: 10px;
+            padding: 5px; /* Reduced padding for smaller width */
             cursor: pointer;
             vertical-align: top;
+            width: 50px; /* Set a fixed width for each cell */
+            box-sizing: border-box; /* Include padding in width */
         }
         .calendar th {
             background-color: #f7f7f7;
